<resources>
    <string name="app_name">Bin Check</string>
    <string name="bank">BANK</string>
    <string name="scheme_network">SCHEME / NETWORK</string>
    <string name="brand">BRAND</string>
    <string name="luhn">LUHN</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="length">LENGTH</string>
    <string name="type">TYPE</string>
    <string name="bin_iin">BIN/IIN</string>
    <string name="country">COUNTRY</string>
    <string name="prepaid">PREPAID</string>
</resources>